--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,7 +10,7 @@ services:
       - dev
     working_dir: /app
     volumes:
-      - .:/app:delegated
+      - .:/app
 
   phpfpm:
     environment:
