--- a/docker-compose.server.override.yml
+++ b/docker-compose.server.override.yml
@@ -23,3 +23,12 @@ services:
     environment:
       # Match PHP_UPLOAD_MAX_FILESIZE (plus a little more)
       NGINX_MAX_BODY_SIZE: 10M
+
+  # Used only to build assets on STG
+  node:
+    image: node:20
+    profiles:
+      - dev
+    working_dir: /app
+    volumes:
+      - .:/app
