--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -105,6 +105,7 @@ tasks:
       - task drush -- site-install --existing-config --yes
       - task set-user-roles
       - task drush -- cache:rebuild
+      - task translation:import --yes
 
   site-update:
     desc: "Update site"
