--- a/config/sync/field.field.node.project.field_department.yml
+++ b/config/sync/field.field.node.project.field_department.yml
@@ -12,7 +12,7 @@ entity_type: node
 bundle: project
 label: Department
 description: 'Hvilken magistratsafdeling hører projektet under'
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
